fix(style): body overflow on mobile

--- a/client/src/assets/app.styl
+++ b/client/src/assets/app.styl
@@ -2,5 +2,7 @@
   color #444
   font-family 'Exo 2', sans-serif !important
 
+body
+  overflow-x hidden
 html
   overflow-y auto
